# FeatBench

./: README.md  pyproject.toml
data_collect/: main.py  pr_analyzer.py  release_analyzer.py  release_collector.py  utils.py
docker_agent/container/: cache_manager.py
docker_agent/tools/: main.py
scripts/: pull_images.py
